--- a/server/client/public/index.html
+++ b/server/client/public/index.html
@@ -19,6 +19,7 @@
     <title>React App</title>
   </head>
   <body>
+    <audio id="audio" src="./beep.mp3"></audio>
     <div id="root"></div>
   </body>
 </html>
